--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation "androidx.cardview:cardview:1.0.0"
+
 }
