--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
 
     implementation "androidx.cardview:cardview:1.0.0"
 
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+
 }
