--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.MobileTestApp"
         tools:targetApi="31">
         <activity
-            android:name=".HomeActivity"
+            android:name=".ProductListActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
