--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,12 @@
         android:theme="@style/Theme.MobileTestApp"
         tools:targetApi="31">
         <activity
+            android:screenOrientation="portrait"
             android:name=".Activity.ProductListActivity"
             android:exported="false" />
         <activity
             android:name=".Activity.MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
